[gd_scene load_steps=3 format=3 uid="uid://btqu3uig32fvb"]

[ext_resource type="Script" path="res://ui/death_display.gd" id="1_pt2ei"]
[ext_resource type="Theme" uid="uid://dgr682lt2tuy8" path="res://ui/ui_theme.tres" id="2_2e7td"]

[node name="DeathDisplay" type="CanvasLayer"]
script = ExtResource("1_pt2ei")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="OptionsContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 200
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 200
theme_override_constants/margin_bottom = 50

[node name="Panel" type="Panel" parent="OptionsContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="OptionsContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsContainer/MarginContainer"]
layout_mode = 2

[node name="YouDied" type="RichTextLabel" parent="OptionsContainer/MarginContainer/VBoxContainer"]
clip_contents = false
layout_mode = 2
theme_override_colors/default_color = Color(0.819608, 0.254902, 0.254902, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 8
bbcode_enabled = true
text = "[center][wave]You Died!"
fit_content = true
scroll_active = false

[node name="HSeparator2" type="HSeparator" parent="OptionsContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Score" type="Label" parent="OptionsContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.364706, 0.631373, 0.819608, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 16
text = "Score"
horizontal_alignment = 1

[node name="ScoreNumber" type="Label" parent="OptionsContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 32
text = "25"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="OptionsContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="OptionsContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="New" type="Label" parent="OptionsContainer/MarginContainer/VBoxContainer/HBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 0.49, 0.15, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 16
text = "NEW!"
horizontal_alignment = 1

[node name="Best" type="Label" parent="OptionsContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.364706, 0.631373, 0.819608, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 16
text = "Best
"
horizontal_alignment = 1

[node name="VSeparator" type="VSeparator" parent="OptionsContainer/MarginContainer/VBoxContainer/HBoxContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 32

[node name="BestNumber" type="Label" parent="OptionsContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 32
text = "25"
horizontal_alignment = 1

[node name="HSeparator3" type="HSeparator" parent="OptionsContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 19

[node name="Continue" type="Button" parent="OptionsContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_default_cursor_shape = 2
theme = ExtResource("2_2e7td")
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 32
text = "Continue"

[connection signal="pressed" from="OptionsContainer/MarginContainer/VBoxContainer/Continue" to="." method="_on_continue_pressed"]
